--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,33 @@
 <resources>
     <string name="app_name">Sleeping For Less</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="sample">Sample</string>
+    <string name="download_image_successful">"Saved image to Downloads directory."</string>
+    <string name="action_view">"View"</string>
+    <string name="published_date">Published %1$s/%2$s/%3$s</string>
+    <string name="updated_date">Updated %1$s/%2$s/%3$s</string>
+    <string name="title_bookmark_list">Bookmark List</string>
+    <string name="title_sort_by">Sort by&#8230;</string>
+    <string name="title_search_result">Search Result : %1$s</string>
+    <string name="copy_image_url_to_clipboard">Copy image URL to clipboard.</string>
+    <string name="removed_from_bookmark">Removed from bookmark.</string>
+    <string name="added_to_bookmark">Added to bookmark.</string>
+    <string name="menu_add_bookmark">Add Bookmark</string>
+    <string name="menu_remove_bookmark">Remove Bookmark</string>
+    <string name="menu_update_all">Update All</string>
+    <string name="menu_remove_all">Remove All</string>
+    <string name="menu_bookmark">Bookmark</string>
+    <string name="menu_refresh">Refresh</string>
+    <string name="menu_search">Search</string>
+    <string name="menu_sort">Sort</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_info">Info</string>
+    <string name="menu_update">Update</string>
+    <string name="menu_delete">Delete</string>
+    <string name="menu_share">Share</string>
+    <string name="hint_search">Search</string>
+    <string name="bookmark_not_found">ไม่มีบทความที่ Bookmark ไว้</string>
+    <string name="post_not_found">ไม่มีบทความที่ต้องการค้นหา้</string>
+    <string name="bookmark_downloading">กำลังดาวน์โหลดข้อมูล\nเพื่อบันทึกลง Bookmark</string>
+
+
 </resources>
