Add open from original menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="menu_update">Update</string>
     <string name="menu_delete">Delete</string>
     <string name="menu_share">Share</string>
+    <string name="menu_open_from_original">Open from Original</string>
     <string name="hint_search">Search</string>
     <string name="bookmark_not_found">ไม่มีบทความที่ Bookmark ไว้</string>
     <string name="post_not_found">ไม่มีบทความที่ต้องการค้นหา</string>
