--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">Sleeping For Less</string>
     <string name="sample">Sample</string>
     <string name="download_image_successful">"Saved image to Downloads directory."</string>
-    <string name="action_view">"View"</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="action_view">View</string>
     <string name="action_open_bookmark">Open Bookmarks</string>
     <string name="action_dont_warn">Don\'t Warn</string>
     <string name="published_date">Published %1$s/%2$s/%3$s</string>
@@ -37,6 +39,9 @@
     <string name="network_unavailable_with_bookmark">อินเตอร์เน็ตใช้งานไม่ได้\nแต่อ่านบทความจาก Bookmark ได้นะ</string>
     <string name="network_unavailable_no_bookmark">อินเตอร์เน็ตใช้งานไม่ได้\nคราวหน้าลอง Bookmark เก็บไว้ดูนะ\nจะได้เปิดอ่านแบบออฟไลน์ได้</string>
     <string name="warn_offline_bookmark">Bookmark คือบทความที่เก็บออฟไลน์ในเครื่อง</string>
+    <string name="remove_confirm">Delete this bookmark?</string>
+    <string name="remove_confirm_yes">Yes, I\'m sure.</string>
+    <string name="remove_confirm_no">Noooo~</string>
 
 
 </resources>
