--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="title_sort_by">Sort by&#8230;</string>
     <string name="title_search_result">Search Result : %1$s</string>
     <string name="title_new_blog_post_available">New Blog Post Available</string>
+    <string name="title_settings">Settings</string>
     <string name="copy_image_url_to_clipboard">Copy image URL to clipboard.</string>
     <string name="removed_from_bookmark">Removed from bookmark.</string>
     <string name="removed_all_bookmark">Removed all bookmark.</string>
@@ -45,6 +46,9 @@
     <string name="remove_all_confirm_description">This can\'t be undone.</string>
     <string name="remove_confirm_yes">Yes, I\'m sure.</string>
     <string name="remove_confirm_no">Noooo~</string>
-
-
+    <string name="settings_push_notification">Push Notification</string>
+    <string name="settings_clear_app_cache">Clear App Cache</string>
+    <string name="settings_loading">&#8230;</string>
+    <string name="settings_key_push_notification">key_push_notification</string>
+    <string name="cache_file_size">Size %1$s</string>
 </resources>
