--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,9 +49,11 @@
     <string name="settings_push_notification">Push Notification</string>
     <string name="settings_clear_app_cache">Clear App Cache</string>
     <string name="settings_loading">&#8230;</string>
+    <string name="settings_app_version">App Version</string>
     <string name="settings_key_push_notification">key_push_notification</string>
+    <string name="settings_key_clear_app_cache">key_clear_app_cache</string>
+    <string name="settings_key_app_version">key_app_version</string>
     <string name="settings_category_notification">Notifications</string>
     <string name="settings_category_storage">Storage</string>
-    <string name="settings_category_Other">Other</string>
-    <string name="cache_file_size">Size %1$s</string>
+    <string name="settings_category_other">Other</string>
 </resources>
