--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,10 +46,13 @@
     <string name="remove_all_confirm_description">This can\'t be undone.</string>
     <string name="remove_confirm_yes">Yes, I\'m sure.</string>
     <string name="remove_confirm_no">Noooo~</string>
-    <string name="settings_push_notification">Push Notification</string>
+    <string name="settings_push_notification_title">Push Notification</string>
+    <string name="settings_push_notification_detail">Enable/Disable push notification.</string>
     <string name="settings_clear_app_cache">Clear App Cache</string>
     <string name="settings_loading">&#8230;</string>
     <string name="settings_app_version">App Version</string>
+    <string name="settings_open_source_licenses_title">Open Source Licenses</string>
+    <string name="settings_open_source_licenses_detail">License details for open source software</string>
     <string name="settings_key_push_notification">key_push_notification</string>
     <string name="settings_key_clear_app_cache">key_clear_app_cache</string>
     <string name="settings_key_app_version">key_app_version</string>
