--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -16,7 +16,8 @@
     <string name="title_new_blog_post_available">บทความใหม่มาแล้วนะ~</string>
     <string name="title_settings">Settings</string>
     <string name="title_open_source_licenses">Open Source Licenses</string>
-    <string name="copy_image_url_to_clipboard">เก็บ URL ของภาพไว้ใน Clipboard เรียบร้อยแล้ว</string>
+    <string name="copy_image_url_to_clipboard">เก็บ URL ของภาพลงใน Clipboard แล้ว</string>
+    <string name="copy_message_to_clipboard">เก็บข้อความลงใน Clipboard แล้ว</string>
     <string name="removed_from_bookmark">ลบออกจาก Bookmark</string>
     <string name="removed_all_bookmark">ลบ Bookmark ทั้งหมด</string>
     <string name="added_to_bookmark">เพิ่มเข้าไปใน Bookmark เรียบร้อยแล้ว</string>
