--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="title_settings">Settings</string>
     <string name="title_open_source_licenses">Open Source Licenses</string>
     <string name="copy_image_url_to_clipboard">Copy image URL to clipboard.</string>
+    <string name="copy_message_to_clipboard">Copy message to clipboard.</string>
     <string name="removed_from_bookmark">Removed from bookmark.</string>
     <string name="removed_all_bookmark">Removed all bookmark.</string>
     <string name="added_to_bookmark">Added to bookmark.</string>
@@ -60,6 +61,6 @@
     <string name="settings_category_notification">Notifications</string>
     <string name="settings_category_storage">Storage</string>
     <string name="settings_category_other">Other</string>
-    <string name="splash_screen_sfl_description">Android Developer for Android Developers</string>
-    <string name="splash_screen_sfl_title">Sleeping For Less</string>
+    <string name="splash_screen_sfl_description" translatable="false">Android Developer for Android Developers</string>
+    <string name="splash_screen_sfl_title" translatable="false">Sleeping For Less</string>
 </resources>
