--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,12 +52,14 @@
     <string name="settings_push_notification_title">Push Notification</string>
     <string name="settings_push_notification_detail">Enable/Disable push notification.</string>
     <string name="settings_clear_app_cache">Clear App Cache</string>
+    <string name="settings_about_me">About Me</string>
     <string name="settings_loading">&#8230;</string>
     <string name="settings_app_version">App Version</string>
     <string name="settings_open_source_licenses_title">Open Source Licenses</string>
     <string name="settings_open_source_licenses_detail">License details for open source software</string>
     <string name="settings_key_push_notification">key_push_notification</string>
     <string name="settings_key_clear_app_cache">key_clear_app_cache</string>
+    <string name="settings_key_about_me">key_about_me</string>
     <string name="settings_key_app_version">key_app_version</string>
     <string name="settings_category_notification">Notifications</string>
     <string name="settings_category_storage">Storage</string>
